--- a/Deals/Base.lproj/Main.storyboard
+++ b/Deals/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="j9J-FH-zqh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="j9J-FH-zqh">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -990,7 +990,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="offer_strip" translatesAutoresizingMaskIntoConstraints="NO" id="9XK-8O-Yld">
-                                <rect key="frame" x="-22" y="94" width="161" height="74"/>
+                                <rect key="frame" x="-22" y="94" width="161.00000000000003" height="74"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="74" id="88U-hL-Fkx"/>
                                     <constraint firstAttribute="width" constant="161" id="pPp-ZG-MdA"/>
@@ -1038,6 +1038,7 @@
                         <outlet property="couponContactButton" destination="Ked-ge-tcq" id="ib8-5q-A87"/>
                         <outlet property="couponDistanceValueLabel" destination="Ros-Cb-7Ew" id="a1C-fV-7lz"/>
                         <outlet property="couponExpiresValueLabel" destination="JHO-QW-L4m" id="6CK-Xe-nxC"/>
+                        <outlet property="couponExpiresValueLabelBgView" destination="5J4-CD-Nxp" id="Wov-an-2kU"/>
                         <outlet property="couponLocateButton" destination="m9B-m4-8SC" id="kv0-rv-4B2"/>
                         <outlet property="couponQRCodeImageView" destination="SA9-zV-MaQ" id="QRh-S8-USg"/>
                         <outlet property="couponVendorAddressLabel" destination="qcD-2b-PdN" id="V1r-CT-P3G"/>
